service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microbot
  namespace: microbot
  labels:
    name: microbot
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  selector:
    app: microbot
