ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: microbot
 namespace: microbot
 annotations:
  cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
  - hosts:
    - kubernetix.de
    secretName: kubernetix-ingress-tls
  - hosts:
    - microbot.kubernetix.de
    secretName: microbot-ingress-tls
  rules:
  - host: microbot.kubernetix.de
    http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: microbot
           port:
             number: 80
  - host: kubernetix.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: microbot
            port:
              number: 80
